packages/papayaui/components/textarea/textarea.scss
@import '../../styles/vars.scss';

.#{$prefix}-textarea {
  $line-height: 24px;

  position: relative;
  display: block;
  width: 100%;
  background-color: _var(textarea-background-color, #fff);
  padding: _var(textarea-padding, 12px 12px);
  font-size: _var(textarea-font-size, 14px);
  color: _var(textarea-color, _var(color-black));
  line-height: _var(textarea-line-height, $line-height);

  &__body {
    display: flex;
    align-items: start;
    width: 100%;
  }

  &__textarea {
    width: inherit;
    font: inherit;
    color: inherit;
    line-height: inherit;
    height: _var(textarea-height, $line-height * 3);
    text-align: _var(textarea-text-align, left);
  }

  &__placeholder {
    color: _var(textarea-placeholder-color, _var(color-disabled));
  }

  &__limit {
    font-size: _var(textarea-limit-font-size, 12px);
    line-height: _var(textarea-limit-font-size, 12px);
    color: _var(textarea-limit-color, gray);
    text-align: _var(textarea-limit-text-align, right);
    margin-top: _var(textarea-limit-margin-top, 4px);
  }

  &__icon {
    flex-shrink: 0;
    font-size: _var(textarea-icon-font-size, 16px);
    color: _var(color-disabled);
    line-height: inherit;
    margin-left: _var(textarea-icon-margin-left, 8px);
  }

  &--auto-height {
    line-height: _var(textarea-line-height, _var(textarea-font-size, 14px));
  }

  &--disabled {
    color: _var(textarea-disabled-color, #c8c9cc);
  }
}

